# parametric_sphere_fitting

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fitting_functor.cpp  fitting_functor.h  mesh.cpp  output.txt  subdiv_evaluator.cpp
eigen_pr/: CMakeLists.txt
eigen_pr/.hg/: branch  dirstate  hgrc  undo.desc
eigen_pr/.hg/cache/: branch2-base  hgtagsfnodes1  rbc-names-v1  rbc-revs-v1
eigen_pr/.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo
eigen_pr/.hg/store/data/: _c_make_lists.txt.i  _c_test_config.cmake.i  _r_e_a_d_m_e.md.i  ~2ehgtags.i
eigen_pr/.hg/store/data/_eigen/: _c_make_lists.txt.i  _cholesky.i  _core.i  _eigenvalues.i  _l_u.i  _q_r.i  _s_v_d.i  _sparse.i  _std_list.i  _super_l_u_support.i
eigen_pr/.hg/store/data/bench/: _bench_timer.h.i  (+2 more)
eigen_pr/Eigen/: CMakeLists.txt
eigen_pr/Eigen/src/: CMakeLists.txt
eigen_pr/Eigen/src/Core/: Solve.h
eigen_pr/Eigen/src/Householder/: HouseholderSequence.h
eigen_pr/Eigen/src/QR/: ColPivHouseholderQR.h
eigen_pr/Eigen/src/SparseCore/: SparseCompressedBase.h  SparseMatrix.h  SparseSolverBase.h  SparseUtil.h  TriangularSolver.h
eigen_pr/Eigen/src/SparseQR/: SparseQR.h
eigen_pr/bench/: BenchTimer.h
eigen_pr/cmake/: EigenTesting.cmake
eigen_pr/doc/: CMakeLists.txt
eigen_pr/lapack/: complex_double.cpp  complex_single.cpp
eigen_pr/test/: CMakeLists.txt  main.h  mixingtypes.cpp  sparse_basic.cpp  sparse_product.cpp  sparseqr.cpp
eigen_pr/unsupported/Eigen/: LevenbergMarquardt  NonLinearOptimization
eigen_pr/unsupported/test/: CMakeLists.txt  NonLinearOptimization.cpp  block_diagonal_sparse_qr.cpp  block_sparse_qr.cpp  ellipse_fitting.cpp  levenberg_marquardt.cpp  spline_fitting.cpp
src/: fit_sphere.cpp  mesh.h  subdiv_evaluator.h  timer.h  visualizer.h
(+383 files in other folders)
