
foreach(f 
Cholesky
CholmodSupport
Core
Eigenvalues
Geometry
Householder
IterativeLinearSolvers
Jacobi
LU
MetisSupport
misc
OrderingMethods
PardisoSupport
PaStiXSupport
plugins
QR
SparseCholesky
SparseCore
SparseLU
SparseQR
SPQRSupport
StlSupport
SuperLUSupport
SVD
UmfPackSupport
)
    add_subdirectory(${f})
endforeach()
